PMLA-38 - minor display issues on mobile for the palm book finder

--- a/doca_theme/src/sass/components/book/_book.scss
+++ b/doca_theme/src/sass/components/book/_book.scss
@@ -6,6 +6,9 @@
 .view-book-search {
   .layout-four-column__item {
     width: inherit;
+    &:first-child {
+      padding-left: 20px;
+    }
     @include breakpoint($medium) {
       padding: 20px 20px 20px 0;
     }
